--- a/css/index.css
+++ b/css/index.css
@@ -65,9 +65,12 @@ h1, h2, h3, h4, h5 {
 }
 
 .container {
-  width: 880px;
-  /* TB LR */
+  width: 80%;
   margin: 0 auto;
+  /* width: 98%;
+  margin: 0 auto; */
+  border: 1px solid red;
+  padding: 20px 1%;
 }
 
 /* header */
@@ -79,17 +82,13 @@ header nav {
 	display:flex;
 	justify-content:space-evenly;
   margin-top: 35px;
-	width:691px;
+	width:80%;
 }
 
 header nav a {
   font-size: 14px;
   color: gray;
   text-decoration: none;
-}
-
-header nav a:hover {
-  text-decoration: underline;
 }
 
 header nav a:first-child {
@@ -101,11 +100,14 @@ header nav a:last-child {
 }
 
 header .logo {
-  margin-top: 25px;
+    display:flex;
+    margin-top: 3%;
 }
 
 /* cta */
 .cta{
+    width:80%;
+    margin: 0 auto;
 	display:flex;
 }
 .cta .cta-text {
@@ -130,9 +132,13 @@ header .logo {
   background: black;
   color: white;
 }
-
-.cta img {
-  margin-top: 69px;
+.cta .cta-img-container {
+    margin-top: 10%;
+    width:50%;
+}
+.cta .cta-img-container img {
+    display:flex;
+  max-width: 100%;
 }
 
 .main-content {
@@ -190,4 +196,33 @@ footer {
   margin: 32px 0;
   text-align: center;
   font-size: 14px;
+}
+
+/* This is 800px */
+@media(max-width: 800px) {
+    header {
+    display:flex;
+    flex-direction: column;
+    align-items:center;
+    }
+    header nav {
+        display:flex;
+    }
+
+    header .logo {
+        display:flex;
+        order:-1;
+        width: 30%;
+        height: 0%;
+    }
+
+    .cta-img-container {
+        visibility: hidden;
+    }
+
+    .cta .cta-text {
+        display: flex;
+        flex-direction: column;
+        align-items:center;
+    }
 }
