reduced margin-top of top content of max 800px

--- a/css/index.css
+++ b/css/index.css
@@ -224,5 +224,6 @@ footer {
         display: flex;
         flex-direction: column;
         align-items:center;
+        margin-top:80px;
     }
 }
